--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
 <p>
-  Welcome <%= @resource.email%>
+  Welcome #{@email}!
 </p>
 <p>You can confirm your account email through the link below:</p>
 <p>
