--- a/app/views/shared/_teacher_side_bar.html.erb
+++ b/app/views/shared/_teacher_side_bar.html.erb
@@ -1,12 +1,12 @@
 <ul class="nav nav-pills nav-stacked">
-  <li class="active">
-    <%= link_to "Exams", "#" %>
+  <li >
+    <%= link_to "Tests", tests_path %>
+  </li>
+  <li >
+    <%= link_to "New Test", new_test_path %>
   </li>
   <li>
-    <%= link_to "New Exam", "#" %>
-  </li>
-  <li>
-    <%= link_to "Completed Exams", "#" %>
+    <%= link_to "Completed Tests", completed_tests_tests_path %>
   </li>
   <li>
     <%= link_to "Reports", "#" %>
